# user/user.route.js
@@ -12,7 +12,7 @@ const router = express.Router();
 router.post('/check-code', async (req, res) => {
     // #swagger.tags= ['Users']
     // #swagger.description = "verify the sms-code of the biz user"
-    // #swagger.parameters['phoneNumber'] = {description:'user's phone number'}
+    // #swagger.parameters['phoneNumber'] = {description:'users phone number'}
     // #swagger.parameters['code'] = {description:'code sent by 019 sistem in the login'}
 
     try {
